--- a/matchingapp/templates/matchingapp/register.html
+++ b/matchingapp/templates/matchingapp/register.html
@@ -3,31 +3,64 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Register</title
-		<link rel="stylesheet" href="/static/matchingapp/css/styles.css"/>
+		{% load static %}
+		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/style.css' %}">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	</head>
 	<body onload="getHobbies()">
 		<div class="container">
-			<form class="register-form">
-        <ul>
-					<li><input class="input" id="username" type="text" name="username" placeholder="Username" autofocus/></li>
-					<li><input class="input" id="email" type="text" name="email" placeholder="Email"/></li>
-					<li><input class="input" id="firstName" type="text" name="firstName" placeholder="First Name"/></li>
-					<li><input class="input" id="lastName" type="text" name="lastName" placeholder="Last Name"/></li>
-					<li><input type="radio" name="gender" value="male"/> Male
-					<li><input type="radio" name="gender" value="female"/> Female
-					<li><input type="radio" name="gender" value="other"/> Other
-          <li><input class="input" id="password" type="password" name="password" placeholder="Password"/></li>
-          <li><input class="input" id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password"/></li>
+			<form class="register-form container">
+        <ul id="registerform">
+					<div class="form-group">
+						<li>
+							<label for="username">Username</label>
+							<input class="input form-control" id="username" type="text" name="username" placeholder="Username" autofocus/>
+						</li>
+					</div>
+					<div class="form-group">
+						<li>
+							<label for="email">Email</label>
+							<input class="input form-control" id="email" type="text" name="email" placeholder="Email"/>
+							<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+						</li>
+					</div>
+					<div class="form-group">
+						<li>
+							<label for="firstName">First Name</label>
+							<input class="input form-control" id="firstName" type="text" name="firstName" placeholder="First Name"/>
+						</li>
+					</div>
+					<div class="form-group">
+						<li>
+							<label for="lastName">Last Name</label>
+							<input class="input form-control" id="lastName" type="text" name="lastName" placeholder="Last Name"/>
+						</li>
+					</div>
+					<div class="form-group">
+						<label>Gender</label>
+						<li><input type="radio" name="gender" value="male"/> Male
+						<li><input type="radio" name="gender" value="female"/> Female
+						<li><input type="radio" name="gender" value="other"/> Other
+					</div>
+					<div class="form-group">
+          	<li>
+							<label for="password">Password</label>
+							<input class="input form-control" id="password" type="password" name="password" placeholder="Password"/>
+						</li>
+					</div>
+					<div class="form-group">
+						<li>
+							<label for="confirmPassword">Confirm Password</label>
+							<input class="input form-control" id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password"/>
+						</li>
+					</div>
 					<br/><br/>
 					<ol id = 'list'></ol>
-          <button class="next-button" onclick='createUser()'> Create Account </button>
+          <button class="next-button btn btn-primary" onclick='createUser()'> Create Account </button>
         </ul>
 			</form>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
