--- a/matchingapp/templates/matchingapp/login.html
+++ b/matchingapp/templates/matchingapp/login.html
@@ -4,19 +4,29 @@
 		<meta charset="UTF-8">
 		<title>Register</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		{% load static %}
+		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/style.css' %}">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	</head>
 	<body>
-			<form class="login-form">
-        <input class="input" id="username" type="text" name="username" placeholder="Username" autofocus/>
-        <input class="input" id="password" type="password" name="password" placeholder="Password"/>
-        <br/>
-        <label id = "message" style = "display: none;"></label>
-        <button class="next-button" onclick='loginUser()'> Login </button>
-        <br/>
-        <br/>
+			<form class="login-form container">
+				<div class="form-group">
+					<label for="username">Username</label>
+        	<input class="input" id="username" type="text" name="username" placeholder="Username" autofocus/>
+				</div>
+				<div class="form-group">
+					<label for="password">Password</label>
+        	<input class="input" id="password" type="password" name="password" placeholder="Password"/>
+				</div>
+        <br/><label id = "message" style = "display: none;"></label>
+        <button class="next-button btn btn-primary" onclick='loginUser()'> Login </button>
+        <br/><br/>
         <a href = "{%url 'register'%}">No account? Click here to register</a>
       </form>
-
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script type = 'text/javascript'>
         function loginUser()
@@ -28,28 +38,21 @@
               username: $("#username").val(),
               password: $("#password").val(),
             },
-            success: function(data)
-            {
-              if(data[0].success == "true")
-              {
+            success: function(data){
+              if(data[0].success == "true"){
                 $("#message").html("Successful login");
                 $("#message").css("display","inline");
               }
-
-              else if(data[0].success == "false" && data[0].message == "incorrect password")
-              {
+              else if(data[0].success == "false" && data[0].message == "incorrect password"){
                 $("#message").html("Incorrect login details. Please try again.");
                 $("#message").css("display","inline");
               }
-
-              else if(data[0].success == "false" && data[0].message == "user does not exist")
-              {
+              else if(data[0].success == "false" && data[0].message == "user does not exist"){
                 $("#message").html("No account matching this username exists. Please try again.");
                 $("#message").css("display","inline");
               }
             }
           });
-
           event.preventDefault();
         }
       </script>
