--- a/matchingapp/templates/matchingapp/register.html
+++ b/matchingapp/templates/matchingapp/register.html
@@ -13,18 +13,34 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	</head>
 	<body onload="loadLists()">
-						<form class="register-form">
-								<input class="input" id="username" type="text" name="username" placeholder="Username" autofocus/>
-								<input class="input" id="email" type="text" name="email" placeholder="Email"/>
-								<input class="input" id="firstName" type="text" name="firstName" placeholder="First Name"/>
-								<input class="input" id="lastName" type="text" name="lastName" placeholder="Last Name"/>
-								<input type="radio" name="gender" value="male"/> Male
-  							<input type="radio" name="gender" value="female"/> Female
-  							<input type="radio" name="gender" value="other"/> Other
-                <input class="input" id="password" type="password" name="password" placeholder="Password"/>
-                <input class="input" id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password"/>
-								<br/>
-								<br/>
+						<form class="register-form container">
+								<div class="form-group">
+									<label for="username">Username</label>
+									<input class="input" id="username" type="text" name="username" placeholder="Username" autofocus/>
+								</div>
+								<div class="form-group">
+									<label for="email">Email</label>
+									<input class="input" id="email" type="text" name="email" placeholder="Email"/>
+								</div>
+								<div class="form-group">
+									<label for="firstName">First Name</label>
+									<input class="input" id="firstName" type="text" name="firstName" placeholder="First Name"/>
+								</div>
+								<div class="form-group">
+									<label for="lastName">Last Name</label>
+									<input class="input" id="lastName" type="text" name="lastName" placeholder="Last Name"/>
+								</div>
+								<div class="form-group">
+									<label for="gender">Gender</label>
+									<input type="radio" name="gender" value="male"/> Male
+  								<input type="radio" name="gender" value="female"/> Female
+  								<input type="radio" name="gender" value="other"/> Other
+								</div>
+								<div class="form-group">
+									<label for="password">Password</label>
+                	<input class="input" id="password" type="password" name="password" placeholder="Password"/>
+                	<input class="input" id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password"/>
+								</div>
 								<span>
 									<label>Date of Birth</label>
 									<select id="day"></select>
@@ -41,7 +57,7 @@
 								<br/>
 								<ul id = 'list'></ul>
 								<label id = "message" style = "display: none;"></label>
-                <button class="next-button" onclick='createUser()'> Create Account </button>
+                <button class="next-button btn btn-primary" onclick='createUser()'> Create Account </button>
 								<br/>
 								<br/>
 								<a href = "{%url 'index'%}">Login</a>
