Fixed rest of Bootstrap

--- a/matchingapp/templates/matchingapp/register.html
+++ b/matchingapp/templates/matchingapp/register.html
@@ -16,19 +16,20 @@
 						<form class="register-form container">
 								<div class="form-group">
 									<label for="username">Username</label>
-									<input class="input" id="username" type="text" name="username" placeholder="Username" autofocus/>
+									<input class="input form-control" id="username" type="text" name="username" placeholder="Username" autofocus/>
 								</div>
 								<div class="form-group">
 									<label for="email">Email</label>
-									<input class="input" id="email" type="text" name="email" placeholder="Email"/>
+									<input class="input form-control" id="email" type="text" name="email" placeholder="Email"/>
+									<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
 								</div>
 								<div class="form-group">
 									<label for="firstName">First Name</label>
-									<input class="input" id="firstName" type="text" name="firstName" placeholder="First Name"/>
+									<input class="input form-control" id="firstName" type="text" name="firstName" placeholder="First Name"/>
 								</div>
 								<div class="form-group">
 									<label for="lastName">Last Name</label>
-									<input class="input" id="lastName" type="text" name="lastName" placeholder="Last Name"/>
+									<input class="input form-control" id="lastName" type="text" name="lastName" placeholder="Last Name"/>
 								</div>
 								<div class="form-group">
 									<label for="gender">Gender</label>
@@ -38,8 +39,8 @@
 								</div>
 								<div class="form-group">
 									<label for="password">Password</label>
-                	<input class="input" id="password" type="password" name="password" placeholder="Password"/>
-                	<input class="input" id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password"/>
+                	<input class="input form-control" id="password" type="password" name="password" placeholder="Password"/><br/>
+                	<input class="input form-control" id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password"/>
 								</div>
 								<span>
 									<label>Date of Birth</label>
