--- a/matchingapp/templates/matchingapp/login.html
+++ b/matchingapp/templates/matchingapp/login.html
@@ -16,11 +16,11 @@
 			<form class="login-form container">
 				<div class="form-group">
 					<label for="username">Username</label>
-        	<input class="input" id="username" type="text" name="username" placeholder="Username" autofocus/>
+        	<input class="input form-control" id="username" type="text" name="username" placeholder="Username" autofocus/>
 				</div>
 				<div class="form-group">
 					<label for="password">Password</label>
-        	<input class="input" id="password" type="password" name="password" placeholder="Password"/>
+        	<input class="input form-control" id="password" type="password" name="password" placeholder="Password"/>
 				</div>
         <br/><label id = "message" style = "display: none;"></label>
         <button class="next-button btn btn-primary" onclick='loginUser()'> Login </button>
