--- a/matchingapp/templates/matchingapp/register.html
+++ b/matchingapp/templates/matchingapp/register.html
@@ -42,19 +42,21 @@
                 	<input class="input form-control" id="password" type="password" name="password" placeholder="Password"/><br/>
                 	<input class="input form-control" id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password"/>
 								</div>
-								<span>
-									<label>Date of Birth</label>
-									<select id="day"></select>
-									<select id="month">
-										<option value="january">January</option><option value="february">February</option>
-										<option value="march">March</option><option value="april">April</option>
-										<option value="may">May</option><option value="june">June</option>
-										<option value="july">July</option><option value="august">August</option>
-										<option value="september">September</option><option value="october">October</option>
-										<option value="november">November</option><option value="december">December</option>
-									</select>
-									<select id="year"></select>
-								</span>
+								<div class="form-group">
+									<span class="dropdown">
+										<label>Date of Birth</label>
+										<select id="day"></select>
+										<select id="month">
+											<option value="january">January</option><option value="february">February</option>
+											<option value="march">March</option><option value="april">April</option>
+											<option value="may">May</option><option value="june">June</option>
+											<option value="july">July</option><option value="august">August</option>
+											<option value="september">September</option><option value="october">October</option>
+											<option value="november">November</option><option value="december">December</option>
+										</select>
+										<select id="year"></select>
+									</span>
+								</div>
 								<br/>
 								<ul id = 'list'></ul>
 								<label id = "message" style = "display: none;"></label>
