--- a/matchingapp/templates/matchingapp/login.html
+++ b/matchingapp/templates/matchingapp/login.html
@@ -5,7 +5,7 @@
 		<title>Register</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% load static %}
-		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/style.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/loginstyle.css' %}">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
