--- a/matchingapp/templates/matchingapp/register.html
+++ b/matchingapp/templates/matchingapp/register.html
@@ -61,7 +61,7 @@
                 <button class="next-button btn btn-primary" onclick='createUser()'> Create Account </button>
 								<br/>
 								<br/>
-								<a href = "{%url 'index'%}">Login</a>
+								<a href = "{%url 'loginPage'%}">Login</a>
 						</form>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type = 'text/javascript'>
