--- a/matchingapp/templates/matchingapp/home.html
+++ b/matchingapp/templates/matchingapp/home.html
@@ -25,8 +25,6 @@
            }
         });
 
-        console.log(loggedIn);
-
         return loggedIn;
       }
 
@@ -34,7 +32,7 @@
       {
         var flag = authenticateUser();
 
-        if(!flag)
+        if(flag === false)
         {
           returnToLogin();
         }
