--- a/matchingapp/templates/matchingapp/register.html
+++ b/matchingapp/templates/matchingapp/register.html
@@ -5,7 +5,9 @@
 		<title>Register</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% load static %}
+		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/style.css' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/registerstyle.css' %}">
+		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
@@ -13,58 +15,59 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	</head>
 	<body onload="loadLists()">
-						<form class="register-form container">
-								<div class="form-group">
-									<label for="username">Username</label>
-									<input class="input form-control" id="username" type="text" name="username" placeholder="Username" autofocus/>
-								</div>
-								<div class="form-group">
-									<label for="email">Email</label>
-									<input class="input form-control" id="email" type="text" name="email" placeholder="Email"/>
-									<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-								</div>
-								<div class="form-group">
-									<label for="firstName">First Name</label>
-									<input class="input form-control" id="firstName" type="text" name="firstName" placeholder="First Name"/>
-								</div>
-								<div class="form-group">
-									<label for="lastName">Last Name</label>
-									<input class="input form-control" id="lastName" type="text" name="lastName" placeholder="Last Name"/>
-								</div>
-								<div class="form-group">
-									<label for="gender">Gender</label>
-									<input type="radio" name="gender" value="male"/> Male
-  								<input type="radio" name="gender" value="female"/> Female
-  								<input type="radio" name="gender" value="other"/> Other
-								</div>
-								<div class="form-group">
-									<label for="password">Password</label>
-                	<input class="input form-control" id="password" type="password" name="password" placeholder="Password"/><br/>
-                	<input class="input form-control" id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password"/>
-								</div>
-								<div class="form-group">
-									<span class="dropdown">
-										<label>Date of Birth</label>
-										<select id="day"></select>
-										<select id="month">
-											<option value="january">January</option><option value="february">February</option>
-											<option value="march">March</option><option value="april">April</option>
-											<option value="may">May</option><option value="june">June</option>
-											<option value="july">July</option><option value="august">August</option>
-											<option value="september">September</option><option value="october">October</option>
-											<option value="november">November</option><option value="december">December</option>
-										</select>
-										<select id="year"></select>
-									</span>
-								</div>
-								<br/>
-								<ul id = 'list'></ul>
-								<label id = "message" style = "display: none;"></label>
-                <button class="next-button btn btn-primary" onclick='createUser()'> Create Account </button>
-								<br/>
-								<br/>
-								<a href = "{%url 'loginPage'%}">Login</a>
-						</form>
+			<h1 class="header"><a href="/">Matching App</a></h1>
+			<form class="register-form container">
+					<div class="form-group">
+						<label for="username">Username</label>
+						<input class="input form-control" id="username" type="text" name="username" placeholder="Username" autofocus/>
+					</div>
+					<div class="form-group">
+						<label for="email">Email</label>
+						<input class="input form-control" id="email" type="text" name="email" placeholder="Email"/>
+						<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+					</div>
+					<div class="form-group">
+						<label for="firstName">First Name</label>
+						<input class="input form-control" id="firstName" type="text" name="firstName" placeholder="First Name"/>
+					</div>
+					<div class="form-group">
+						<label for="lastName">Last Name</label>
+						<input class="input form-control" id="lastName" type="text" name="lastName" placeholder="Last Name"/>
+					</div>
+					<div class="form-group">
+						<label for="gender">Gender</label>
+						<input type="radio" name="gender" value="male"/> Male
+						<input type="radio" name="gender" value="female"/> Female
+						<input type="radio" name="gender" value="other"/> Other
+					</div>
+					<div class="form-group">
+						<label for="password">Password</label>
+          	<input class="input form-control" id="password" type="password" name="password" placeholder="Password"/><br/>
+          	<input class="input form-control" id="confirmPassword" type="password" name="confirmPassword" placeholder="Confirm Password"/>
+					</div>
+					<div class="form-group">
+						<span class="dropdown">
+							<label>Date of Birth</label>
+							<select id="day"></select>
+							<select id="month">
+								<option value="january">January</option><option value="february">February</option>
+								<option value="march">March</option><option value="april">April</option>
+								<option value="may">May</option><option value="june">June</option>
+								<option value="july">July</option><option value="august">August</option>
+								<option value="september">September</option><option value="october">October</option>
+								<option value="november">November</option><option value="december">December</option>
+							</select>
+							<select id="year"></select>
+						</span>
+					</div>
+					<br/>
+					<ul id = 'list'></ul>
+					<label id = "message" style = "display: none;"></label>
+          <button class="next-button btn btn-primary" onclick='createUser()'> Create Account </button>
+					<br/>
+					<br/>
+					<a href = "{%url 'loginPage'%}">Login</a>
+			</form>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type = 'text/javascript'>
 			function createUser(){
