--- a/matchingapp/templates/matchingapp/login.html
+++ b/matchingapp/templates/matchingapp/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<title>Register</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		{% load static %}
 		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/style.css' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/loginstyle.css' %}">
 		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
@@ -13,23 +13,34 @@
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	</head>
 	<body>
 			<h1 class="header"><a href="/">Matching App</a></h1>
-			<form class="login-form container">
-				<div class="form-group">
-					<label for="username">Username</label>
-        	<input class="input form-control" id="username" type="text" name="username" placeholder="Username" autofocus/>
-				</div>
-				<div class="form-group">
-					<label for="password">Password</label>
-        	<input class="input form-control" id="password" type="password" name="password" placeholder="Password"/>
-				</div>
-        <br/><label id = "message" style = "display: none;"></label>
-        <button class="next-button btn btn-primary" onclick='loginUser()'> Login </button>
-        <br/><br/>
-        <a href = "{%url 'register'%}">No account? Click here to register</a>
-      </form>
+			<!-- Form -->
+			<div class="form-box">
+				<form class="login-form container">
+					<div class="form-group">
+						<label for="username">Username</label>
+						<div class="input-group">
+							<div class="input-group-addon"><span class="fas fa-user"></span></div>
+	        		<input class="input form-control" id="username" type="text" name="username" placeholder="Username" autofocus/>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="password">Password</label>
+						<div class="input-group">
+							<div class="input-group-addon"><span class="fas fa-key"></span></div>
+	        		<input class="input form-control" id="password" type="password" name="password" placeholder="Password"/>
+						</div>
+					</div>
+	        <br/><label id = "message" style = "display: none;"></label>
+	        <button class="next-button btn btn-primary" onclick='loginUser()'> Login </button>
+	        <br/><br/>
+	        <a href = "{%url 'register'%}">No account? Click here to register</a>
+	      </form>
+			</div>
+			<!-- /.Form -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script type = 'text/javascript'>
         function loginUser()
