--- a/matchingapp/templates/matchingapp/login.html
+++ b/matchingapp/templates/matchingapp/login.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	</head>
 	<body>
-			<h1 class="header"><a href="/">Matching App</a></h1>
+			<h1 class="header"><a href="/matchingapp/home">Matching App</a></h1>
 			<!-- Form -->
 			<div class="form-box">
 				<form class="login-form container">
