--- a/matchingapp/templates/matchingapp/login.html
+++ b/matchingapp/templates/matchingapp/login.html
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 	        <br/><label id = "message" style = "display: none;"></label>
-	        <button class="next-button btn btn-primary" onclick='loginUser()'> Login </button>
+	        <button id="loginbtn" class="next-button btn btn-primary" onclick='loginUser()'> Login </button>
 	        <br/><br/>
 	        <a href = "{%url 'register'%}">No account? Click here to register</a>
 	      </form>
