--- a/matchingapp/templates/matchingapp/login.html
+++ b/matchingapp/templates/matchingapp/login.html
@@ -1,22 +1,9 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Register</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/style.css' %}">
-		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/loginstyle.css' %}">
-		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	</head>
-	<body>
-			<h1 class="header"><a href="/matchingapp/home">Matching App</a></h1>
+{% extends 'matchingapp/base.html' %}
+		{% load static %}
+		{% block title %}<title>Login</title>{% endblock %}
+		{% block stylesheet %}<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/loginstyle.css' %}">{% endblock %}
+	{% block body %}<body>{% endblock %}
+		{% block content %}
 			<!-- Form -->
 			<div class="form-box">
 				<form class="login-form container">
@@ -70,10 +57,10 @@
           event.preventDefault();
         }
 
-				function returnHome()
-				{
+				function returnHome(){
 					window.location = '/matchingapp/';
 				}
       </script>
+			{% endblock %}
   </body>
 </html>
