--- a/matchingapp/templates/matchingapp/register.html
+++ b/matchingapp/templates/matchingapp/register.html
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Register</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/style.css' %}">
-		<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/registerstyle.css' %}">
-		<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-	</head>
-	<body onload="loadLists()">
-			<h1 class="header"><a href="/matchingapp/home">Matching App</a></h1>
+{% extends 'matchingapp/base.html' %}
+		{% load static %}
+		{% block title %}<title>Register</title>{% endblock %}
+		{% block stylesheet %}<link rel="stylesheet" type="text/css" href="{% static 'matchingapp/registerstyle.css' %}">{% endblock %}
+	{% block body %}<body onload="loadLists()"> {% endblock %}
+		{% block content %}
 			<form id="form" class="register-form container">
 					<div class="form-group">
 						<label for="username">Username</label>
@@ -189,5 +177,6 @@
 			populateList();
 		}
   </script>
+	{% endblock %}
 	</body>
 </html>
