--- a/matchingapp/static/matchingapp/style.css
+++ b/matchingapp/static/matchingapp/style.css
@@ -4,3 +4,13 @@
   color: #2b2b2b;
   text-shadow: 3px 3px 0px rgba(0,0,0,0.1), 7px 7px 0px rgba(0,0,0,0.05);
 }
+
+.navbar-nav a {
+    padding: 15px 0;
+    text-align: center;
+  }
+
+.navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
+  color: white !important;
+  background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+}
