--- a/matchingapp/templates/matchingapp/login.html
+++ b/matchingapp/templates/matchingapp/login.html
@@ -58,7 +58,7 @@
         }
 
 				function returnHome(){
-					window.location = '/matchingapp/';
+					window.location = '/matchingapp/home';
 				}
       </script>
 			{% endblock %}
