--- a/matchingapp/templates/matchingapp/home.html
+++ b/matchingapp/templates/matchingapp/home.html
@@ -4,13 +4,16 @@
 		<meta charset="UTF-8">
 		<title>Home</title>
 	</head>
-	<body onload="checkLoginStatus()">
+	<body>
     <h1> Successfully logged in </h1>
 
-    <button onclick='logoutUser()'> Logout </button>
+    <button id="logout"> Logout </button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type = 'text/javascript'>
+		$( document ).ready(function() {
+			window.onload = checkLoginStatus;
+			
       function authenticateUser(){
         var loggedIn = false;
         $.ajax({
@@ -32,19 +35,21 @@
         }
       }
 
-      function logoutUser(){
-            $.ajax({
-              type:'POST',
-              url: 'logout/',
-              success: function(data){
-                returnToLogin();
-              }
-            });
-      }
+      $("#logout").on('click', function(e){
+				e.preventDefault();
+        $.ajax({
+          type:'POST',
+          url: 'logout/',
+          success: function(data){
+            returnToLogin();
+          }
+        });
+      });
 
       function returnToLogin(){
         window.location = '/matchingapp/loginPage';
       }
+		});
     </script>
   </body>
 </html>
