--- a/matchingapp/templates/matchingapp/home.html
+++ b/matchingapp/templates/matchingapp/home.html
@@ -1,7 +1,7 @@
 {% extends 'matchingapp/base.html' %}
 		{% load static %}
 		{% block title %}<title>Home</title>{% endblock %}
-	{% block body %}<body>{% endblock %}
+	{% block body %}<body onload="checkLoginStatus()">{% endblock %}
 		{% block content %}
     <h1> Successfully logged in </h1>
 
@@ -9,9 +9,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type = 'text/javascript'>
-		$( document ).ready(function() {
-			window.onload = checkLoginStatus;
-
       function authenticateUser(){
         var loggedIn = false;
         $.ajax({
@@ -47,7 +44,6 @@
       function returnToLogin(){
         window.location = '/matchingapp/loginPage';
       }
-		});
     </script>
   </body>
 	{% endblock %}
